--- a/FlowchartEditorClient/gradle/libs.versions.toml
+++ b/FlowchartEditorClient/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ constraintlayout = "2.2.1"
 materialVersion = "1.13.0"
 okhttp = "4.12.0"
 retrofit = "2.9.0"
+viewpager2 = "1.1.0"
+fragment = "1.8.2"
 
 [libraries]
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
@@ -32,6 +34,8 @@ material-v1110 = { module = "com.google.android.material:material", version.ref 
 material-v1130 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
+fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
